# [Tom's Obvious Minimal Language]...

[project]
name = "PaleszUtils"
version = "1.0.0"
description = "The basic palesz app built on the Flask tutorial."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["palesz_utils"]
